--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,6 @@
     "require-tree": "^0.3.3",
     "socket.io": "^1.0.6",
     "underscore": "^1.6.0",
-    "underscore": "^0.3.3"
+    "require-tree": "^0.3.3"
   }
 }
